# pyroll-gripping-analysis

./: README.md  hatch.toml  pyproject.toml
docs/: docs.tex  refs.bib
pyroll/: gripping_analysis.py
pyroll/gripping_analysis/: __init__.py  pillar_element.py  reporter_impls.py  rollpass_hookimpls.py  rollpass_in_profile_hookspecs.py
pyroll/gripping_condition/: __init__.py  pillar_element.py  reporter_impls.py  rollpass_hookimpls.py  rollpass_hookspecs.py  rollpass_in_profile_hookimpls.py  rollpass_roll_hookimpls.py  rollpass_roll_hookspecs.py
tests/: input_imf_continuous_rolling_plant.py  input_single_groove.py  test_solve.py  test_solve3.py  test_solve_imf_conti.py
