[tool.poetry]
name = "pyroll-gripping-condition"
version = "1.0.0"
description = "Plugin for PyRoll calculating and evaluating the geometric gripping condition."
authors = ["Christoph Renzing <christoph.renzing@imf.tu-freiberg.de>"]
license = "BSD-3-Clause"
homepage = "https://pyroll-project.github.io/"
repository = "https://github.com/pyroll-project/pyroll-gripping-condition"
documentation = "https://pyroll-project.github.io/modules/pyroll-gripping-condition/docs/docs"
packages = [
    { include = "pyroll/gripping-condition" }
]
readme = "README.md"
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Manufacturing",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering"
]

[tool.poetry.dependencies]
python = ">= 3.9, <3.11"
pyroll-basic = "^1.0.0"


[tool.poetry.dev-dependencies]
pytest = "^7.0.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
