[project]
name = "pyroll-gripping-analysis" # insert the name of yout plugin here
description = "Plugin for PyRoll calculating and analysing the geometric gripping condition."
authors = [
    { name = "Christoph Renzing", email = "christoph.renzing@imf.tu-freiberg.de" }
]
license = "BSD-3-Clause"
requires-python = ">=3.9, <4.0"
dependencies = [
    "pyroll-core ~= 2.0",
    "pyroll-interface-friction ~= 2.0"
]

dynamic = ["version"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

